Refine native build
* Introduce main methods for generating native image metadata
  - This is done in two passes; once using the tracing agent, once using
    classgraph
* Rewrite DiagnosticsSnippetTests to test both native and JVM code
* Remove logic for building macOS/amd64
* Bump GraalVM to 25.1.3
* (Miscellaneous) improve build cacheing; fix issues where various
  tasks aren't considered up-to-date on successive builds